tests/extensions/imports/valid/doubleImport.wacc
# Output: 
# 42

import "samelib.wacc";
import "samelib.wacc";
begin
    int x = call samelib::f();
    println x
end