tests/extensions/imports/semanticErr/noAccessor.wacc
import "samelib.wacc";
begin
    int x = call f();
    print x
end